Add Unspecified and Discussion sections

--- a/point-nine-repeating.html
+++ b/point-nine-repeating.html
@@ -73,7 +73,7 @@ I believe that we need to be able to communicate more clearly with one another. 
 Others may prefer to use different terminology. However, if different terminology is used, it should be as least as expressive as the terminology I have chosen. Using some other terminology, one should at least be able to clearly express each of the abstract concepts I identify in this article.
 
 <p>
-For example, I use the term variable to identify an abstract concept in this article. I can understand that someone may want to use some other term to identify that same concept. Which term would you prefer? In an earlier revision of this article I used the term sequence variable, instead of just variable. I am willing to use different terminology. Frankly, I have found it surprisingly difficult to find a generally accepted term for this particular concept.
+For example, I use the term variable to identify an abstract concept, in this article. I can understand that someone may want to use some other term to identify that same concept. Which term would you prefer? In an earlier revision of this article I used the term sequence variable, instead of just variable. I am willing to use different terminology. Frankly, I have found it surprisingly difficult to find a generally accepted term for this particular concept.
 
 <p>
 Of course there is a term, rather than variable or sequence variable, which conveys the idea of something which starts out as 0.9, and then later extends to 0.99, and then to 0.999, and which continues to extend by adding nines over time without ever stopping. Yes, the term 0.999... is very fitting!
