--- a/point-nine-repeating.html
+++ b/point-nine-repeating.html
@@ -10,28 +10,62 @@ The number 0.9 does not equal one. And the number 0.99 does not equal one. No ma
 The question "Does 0.999... equal one?" is confusing since the term "0.999..." implies that the nines repeat without end, making it impossible to get to the word "equal" when trying to make sense of the question.
 
 <p>
-In order to make sense of the question, it is necessary to define the term "0.999...". 
-
-<h3>Variable</h3>
-<p>
-If we define the term as a variable which approaches one as nines are added, then no it does not equal one since it does not refer to the same number at any time. Rather, it refers to a different number each time a nine is added.
-
-<h3>Contradiction</h3>
-<p>
-One might attempt to define the term as a zero followed by a decimal point followed by an infinite sequence of nines, not a sequence which is continually growing, but a static sequence which has no end. Such an attempt to define would be contradictory since specifying the end of a static sequence is necessary in order to define the sequence. 
+Kevin thought it was pretty obvious that point nine repeating did not equal one. Why were so many people insisting that it did? Kevin was an inquisitive child, and he was confident in his own ability to think. Kevin liked thinking. For him it was fun, like a sport. As he got older, he had several experiences which drew his attention back to this question about other people, and what they were teaching.
 
 <p>
-In order to define a static sequence it is necessary to define both the beginning and the end of the sequence. For example, suppose that the first element of a sequence is nine, the second element is nine, and likewise the third element is nine. Has the sequence been defined? Not yet. If we additionally specify that the third element is the last element, then the sequence is defined. Once the sequence is defined we can interpret the sequence as a number, 999.
+I am convinced that mutual understanding is within our reach. By "our" I mean everyone. Students, teachers, highly trained mathematicians, armchair philosophers, young, and old, everyone! And, I am convinced that one key to such mutual understanding is to more clearly define our terminology. After all, terminology is what we use to share ideas with each other. If we misunderstand each other's terminology, it is difficult to converse productively.   
 
 <p>
-I reject the practice of defining the term sequence as referring to something which does not have an end, because the sequence of digits 999 has an end, and is a sequence.
+We can start by recognizing that 0.999... is a term. Like any other term it can have various meanings associated with it. Is it crystal-clear to everyone exactly what a person means by it? I will attempt to describe five different meanings which could be associated with the term. Then I will suggest a course of action to promote mutual understanding. 
+
+<h3>Repeating</h3>
+<p>
+By repeating I mean that the nines repeat over time, and never stop repeating. I mean a sequence of nines after the decimal point which continually grows, or gets longer over time. The element of time is crucial to the understanding of this particular meaning!
+
+<h3>Limit</h3>
+<p>
+By limit I mean the number to which we can come arbitrarily close by adding nines, which is the number one. 
 
 <h3>Class</h3>
 <p>
-A zero followed by a decimal point followed by an unlimited (in a sense infinite) number of nines may define a class, rather than refer to the contradiction above. The sequences 0.9, 0.99, and 0.999 are all members of this class, meaning that each of these sequences satisfy the constraints of the class. The class itself is a description, not a sequence or a collection of sequences. 
+By class I mean a description of qualifications which must be met in order to belong. For example, a zero followed by a decimal point followed by an unlimited (in a sense infinite) number of nines may define a class. The sequences 0.9, 0.99, and 0.999 all belong to this class, meaning that each of these sequences satisfy the constraints of the class. 
+
+<h3>Unspecified</h3>
+<p>
+By unspecified in this context I mean a zero followed by a decimal point followed by an unspecified arbitrarily large number of nines. What do I mean by an unspecified number? I mean something we use in place of a number, a placeholder. It isn't a number, but we might treat it as if it were in order to accomplish some purpose. Such a placeholder can be useful when the exact number of nines is not important, as long as the number is sufficiently large. In this sense, one minus 0.999... could represent an unspecified arbitrarily small non-zero value. 
+
+<h3>Contradiction</h3>
+<p>
+By contradiction I mean not true by definition. Trying to describe what I mean by contradiction is challenging because there is no meaning in a contradiction. I use the term to signify the absence of meaning.
 
 <p>
-There is no limit to the number of sequences belonging to this class. Therefore it is not possible for any collection of sequences, which collection has been completely defined sometime in the past, to contain all sequences belonging to the class. Here, the phrase "all sequences belonging to the class" does not refer to a collection of sequences. Rather than referring to sequences collectively, it refers to them separately.
+By contradiction I do not mean something paradoxical which seems contradictory but with greater knowledge can be understood, and shown not to be a contradiction.
+
+<p>
+Here is an example of what I do mean. Consider a proposition P to mean that all of the nines have already been added, at some time in the past, and that there are no more nines to add in the future. If we are talking about the sequence of digits 0.999, then the proposition is true after the third nine has been added, and the proposition is not true before that time. If all three are added at the same time, then the proposition is true after that time. The truth of the proposition depends upon which sequence we are talking about and how many nines have already been added. Regardless of the truth of P, the statement "P is both true and not true" is self-contradictory, which means that this statement is false by definition.
+
+<p>
+Though there is no meaning in a contradiction taken as a whole, there certainly can be meaning in its parts. To say that a contradiction is false does not imply that all of its parts are false also.
+
+<h3>Decision</h3>
+<p>
+Which, if any, of the meanings I have described above (Repeating, Limit, Class, Unspecifed, and Contradiction) are intended by use of the term 0.999... ? Many use the term to refer to Limit. If you do so, it is not difficult to prove that it equals one. Why shouldn't we all unite in a decision to do so? Why don't I agree that it is a good idea? 
+
+<p>
+I don't think it is a good idea to use 0.999... to refer to Limit because doing so is confusing. Why? Because if we do, what term will we all use to unambiguously refer to Repeating? Limit and Repeating are two very different meanings. Using the same term to refer to both is sure to cause confusion. We already have a term for referring to Limit. We have the word limit, and more specifically in this case the number one. On the other hand we do not have a generally accepted term for referring to Repeating, even though we call 0.999... a repeating decimal. This lack of a generally accepted term for the meaning I call Repeating is a problem which will not be solved by insisting that 0.999... refers to Limit. 
+
+<p>
+Not only do think it is a bad idea to use 0.999... to refer to Limit, I think it would clear up a lot of confusion to use that term to refer to Repeating! Why? Doesn't the term itself imply that meaning, Repeating? 
+
+<h3>Musings</h3>
+<p>
+What term do you use to refer to Class? What about Unspecified, how do you refer to that meaning? Are there generally accepted ways of referring to these meanings?
+
+<p>
+I suppose that the word class is used to refer to the meaning Class, although I think it is easy to assume no distinction between a class and a collection, between a description and a collection of individuals which satisfy the description.
+
+<p>
+Consider the class "a zero followed by a decimal point followed by an unlimited number of nines", of which the sequences 0.9, 0.99, and 0.999 are all members. There is no limit to the number of sequences belonging to this class. Therefore it is not possible for any collection of sequences, which collection has been completely defined sometime in the past, to contain all sequences belonging to the class. Here, the phrase "all sequences belonging to the class" does not refer to a collection of sequences. Rather than referring to sequences collectively, it refers to them separately.
 
 <p>
 The meaning of a description can change depending on whether the description refers to individuals separately or collectively. Consider the description: "a single sequence, of length one or two nines". What does this description, or class, refer to? Which sequences are members of this class? The answer depends upon whether the description refers to sequences separately or collectively. If the description refers to sequences separately, then both 9 and 99 are members of the class, since both sequences satisfy the description. However, if the description refers to sequences collectively then either 9 or 99 are members of the class, but not both, since the description specifies that the collection contains a single sequence.
@@ -39,20 +73,24 @@ The meaning of a description can change depending on whether the description ref
 <p>
 Using the term "all" to refer to members of any class with unlimited membership necessarily must refer to members separately, not collectively. Using the term "every" clarifies that members are referred to separately. For example, "every sequence belonging to the class" refers to members separately. 
 
-<h3>Limit</h3>
 <p>
-One might define the term to refer to the limit of the variable described above. Since the limit is one, the term would refer to one. To avoid confusion it would be necessary to define a term referring to the variable.
+I'm not confident at all that we have a generally accepted term for Class, especially as I have further described that meaning here, although there are many who do use the term class.
 
 <p>
-Rather than define the term to refer directly to the limit, one might consider defining the term to evaluate to the limit. If the term refers to the variable described above then the term does not evaluate to the limit, because the variable refers to a different number each time a nine is added. If the term refers to the contradiction described above then the term does not evaluate to anything. If the term refers to the class described above then again the term does not evaluate since it is a description not a sequence. In order to pursue this course it would be necessary to specify what the term refers to while ensuring that what the term refers to can evaluate to one. 
+And what about Unspecified? Is the term unspecified a generally accepted way to refer to that meaning? Do we use the term infinitesimal to refer to an unspecified arbitrarily small non-zero value? 
 
-<h3>Unspecified</h3>
 <p>
-Another possible meaning of the term 0.999... is a zero followed by a decimal point followed by an unspecified arbitrarily large number of nines. What is an unspecified number? It is something we use in place of a number, a placeholder. It isn't a number, but we might treat it as if it were in order to accomplish some purpose. Such a placeholder can be useful when the exact number of nines is not important, as long as the number is sufficiently large. In this sense, one minus 0.999... could represent an unspecified arbitrarily small non-zero value. 
+I thought it might be helpful to give another example of Contradiction. One might attempt to define 0.999... as a zero followed by a decimal point followed by an infinite sequence of nines, not a sequence which is continually growing, but a static sequence which has no end. Such an attempt to define would be contradictory since specifying the end of a static sequence is necessary in order to define the sequence. 
 
-<h3>Discussion</h3>
 <p>
-In this article I attempt to make various interpretations of the term 0.999... clear, using common English. I argue that using this term to refer directly to the limit is not a good idea unless some other term is used to refer to the variable described above. Without such a second term, people will resort to using 0.999... to refer both to the limit and to the variable, which is certain to confuse.
+In order to define a static sequence it is necessary to define both the beginning and the end of the sequence. For example, suppose that the first element of a sequence is nine, the second element is nine, and likewise the third element is nine. Has the sequence been defined? Not yet. If we additionally specify that the third element is the last element, then the sequence is defined. Once the sequence is defined we can interpret the sequence as a number, 999.
+
+<p>
+I reject the practice of defining the term sequence as referring to something which does not have an end, because the sequence of digits 999 has an end, and is a sequence.
+
+<h3>Conclusion</h3>
+<p>
+In this article I attempt to make various interpretations of the term 0.999... clear, using common English. I argue that using this term to refer directly to the limit is not a good idea unless some other term is used to refer to repeating. Without such a second term, people will resort to using 0.999... to refer both to the limit and to repeating, which is certain to confuse.
 
 <p>
 Some people are confused, especially young people who are told that if you keep adding nines without ever stopping, or somehow magically add an infinite number of nines all at once, you get one. The inquisitive and confident child is likely to reject such teaching. (The statement "add an infinite number of nines all at once" is self-contradictory.)
@@ -67,23 +105,19 @@ Of course, reason isn't the most important of our human capacities, but it is im
 Speaking of housecleaning, my ZFC paper is such an effort. But I want to do more than point out that someone else's work in not logically consistent. I want to offer something which is consistent, and which meets the need.
 
 <p>
-I believe that we need to be able to communicate more clearly with one another. Such improvement requires willingness to choose words and phrases which others more readily understand. I have attempted to do that, and I hope that any interested party can understand what I mean, in this context, when I use the terms sequence, variable, contradiction, class, limit, and unspecified.
+I believe that we need to be able to communicate more clearly with one another. Such improvement requires willingness to choose words and phrases which others more readily understand. I have attempted to do that, and I hope that any interested party can understand what I mean, in this context, when I use the terms repeating, class, limit, unspecified, and contradiction.
 
 <p>
 Others may prefer to use different terminology. However, if different terminology is used, it should be as least as expressive as the terminology I have chosen. Using some other terminology, one should at least be able to clearly express each of the abstract concepts I identify in this article.
 
 <p>
-For example, I use the term variable to identify an abstract concept, in this article. I can understand that someone may want to use some other term to identify that same concept. Which term would you prefer? In an earlier revision of this article I used the term sequence variable, instead of just variable. I am willing to use different terminology. Frankly, I have found it surprisingly difficult to find a generally accepted term for this particular concept.
-
-<p>
-Of course there is a term, rather than variable or sequence variable, which conveys the idea of something which starts out as 0.9, and then later extends to 0.99, and then to 0.999, and which continues to extend by adding nines over time without ever stopping. Yes, the term 0.999... is very fitting!
+For example, I use the term repeating to identify an abstract concept, in this article. I can understand that someone may want to use some other term to identify that same concept. Which term would you prefer? In earlier revisions of this article I have used the terms sequence variable, and variable. I used the word variable to mean not static. I am willing to use different terminology. Frankly, I have found it surprisingly difficult to find a generally accepted term for this particular concept. Of course there are terms which convey the idea of something which starts out as 0.9, and then later extends to 0.99, and then to 0.999, and which continues to extend by adding nines over time without ever stopping. Yes! The terms 0.999... , repeating, and recurring are all very fitting! I advocate their use for this purpose.
 
 <p>
 If using the same term to refer to two distinct concepts actually simplifies conversation, then it might be a good idea. Has the conversation been simplified? If not, then let us step back and add as many distinct terms as is necessary, until it becomes much easier to understand one another.
 
-
 <p>
-<small>Last revised 26 September 2023</small>
+<small>Last revised 14 October 2023</small>
 <p>
 <small>Copyright &copy; 2023 Kevin Cook</small>
 </body>
