Finishing yesterday's revision

--- a/point-nine-repeating.html
+++ b/point-nine-repeating.html
@@ -47,15 +47,21 @@ Here is an example of what I do mean. Consider a proposition P to mean that all 
 <p>
 Though there is no meaning in a contradiction taken as a whole, there certainly can be meaning in its parts. To say that a contradiction is false does not imply that all of its parts are false also.
 
-<h3>Decision</h3>
 <p>
-Which, if any, of the meanings I have described above (Repeating, Limit, Class, Unspecifed, and Contradiction) are intended by use of the term 0.999... ? Many use the term to refer to Limit. If you do so, it is not difficult to prove that it equals one. Why shouldn't we all unite in a decision to do so? Why don't I agree that it is a good idea? 
+What about the idea that 0.999... is an infinite sequence of nines, not growing over time but finished? Well, infinite implies not finished. Being finished and not finished at the same time is self-contradictory. Is 0.999... finished or not? Is it repeating? If so, why? Is it repeating because it is not finished? If it is not finished then it does not have an infinite number of nines, because there are still nines to be added. Are there still nines to be added? This is the question. It is self-contradictory to answer both yes (it is repeating) and no (it is finished).
+
+<h3>Suggestion</h3>
+<p>
+Which, if any, of the meanings I have described above (Repeating, Limit, Class, Unspecifed, and Contradiction) are intended by use of the term 0.999... ? Which meaning do you intend?
 
 <p>
-I don't think it is a good idea to use 0.999... to refer to Limit because doing so is confusing. Why? Because if we do, what term will we all use to unambiguously refer to Repeating? Limit and Repeating are two very different meanings. Using the same term to refer to both is sure to cause confusion. We already have a term for referring to Limit. We have the word limit, and more specifically in this case the number one. On the other hand we do not have a generally accepted term for referring to Repeating, even though we call 0.999... a repeating decimal. This lack of a generally accepted term for the meaning I call Repeating is a problem which will not be solved by insisting that 0.999... refers to Limit. 
+Intending Contradiction is guaranteed to cause confusion!!!... Don't do it. Stop doing it.
 
 <p>
-Not only do think it is a bad idea to use 0.999... to refer to Limit, I think it would clear up a lot of confusion to use that term to refer to Repeating! Why? Doesn't the term itself imply that meaning, Repeating? 
+Intending Limit is not a good idea because if we do, what term will we all use to unambiguously refer to Repeating? Limit and Repeating are two very different meanings. Using the same term to refer to both can be very confusing. We already have a term for referring to Limit. We have the word limit, and more specifically in this case the number one. On the other hand we do not have a generally accepted term for referring to Repeating, even though we call 0.999... a repeating decimal.
+
+<p>
+Here is my suggestion. Use the term 0.999... to refer to Repeating. I think doing so would clear up a lot of confusion. 
 
 <h3>Musings</h3>
 <p>
