Finishing yesterday's revision

--- a/point-nine-repeating.html
+++ b/point-nine-repeating.html
@@ -86,7 +86,7 @@ I'm not confident at all that we have a generally accepted term for Class, espec
 And what about Unspecified? Is the term unspecified a generally accepted way to refer to that meaning? Do we use the term infinitesimal to refer to an unspecified arbitrarily small non-zero value? 
 
 <p>
-I thought it might be helpful to give another example of Contradiction. One might attempt to define 0.999... as a zero followed by a decimal point followed by an infinite sequence of nines, not a sequence which is continually growing, but a static sequence which has no end. Such an attempt to define would be contradictory since specifying the end of a static sequence is necessary in order to define the sequence. 
+Again regarding Contradiction, one might attempt to define 0.999... as a zero followed by a decimal point followed by an infinite sequence of nines, not a sequence which is continually growing, but a static sequence which has no end. Such an attempt to define would be contradictory since specifying the end of a static sequence is necessary in order to define the sequence. 
 
 <p>
 In order to define a static sequence it is necessary to define both the beginning and the end of the sequence. For example, suppose that the first element of a sequence is nine, the second element is nine, and likewise the third element is nine. Has the sequence been defined? Not yet. If we additionally specify that the third element is the last element, then the sequence is defined. Once the sequence is defined we can interpret the sequence as a number, 999.
